monitoria/mac323/5-3-24/grades/Luiz-Felipe-Moumdjian-Girotto_201372_assignsubmission_file_Mini-EP-XXIV.txt

LOG DE COMPILAÇÃO E TESTE
Existem dois métodos de compilação, eles estão indicados, se um falha eu parto pro outro. Então se quiser entender o porque não compilou, verifique todos.
Segue também o log do corretor, pode ser interessante para descobrir a natureza de seus erros. A saída está trucada (não mostra todas as linha), se quiser ver todo o log, fale comigo

CC......
EP: Luiz-Felipe-Moumdjian-Girotto_201372_assignsubmission_file_Mini-EP-XXIV
NOTA: 93
CORREÇÃO AUTOMÁTICA
1120 Pontos (máximo: 1600, dos quais 400 são bônus)
0 Testes com Falha no corretor (avise o monitor)
2 Testes com Erro de Compilação (incui o bônus)

make: '/home/bcc/victorsenam/private/usp/monitoria/mac323/5-3-24/tester/checker/checker' is up to date.
======= Booyer_006 ============
BooyerDoVictor.java:10: error: cannot find symbol
            for (int i : ex.findAll(StdIn.readString()))
                           ^
  symbol:   method findAll(String)
  location: variable ex of type BoyerMoore
1 error
Compilation Error on Booyer
======= Booyer_007 ============
BooyerDoVictor.java:10: error: cannot find symbol
            for (int i : ex.findAll(StdIn.readString()))
                           ^
  symbol:   method findAll(String)
  location: variable ex of type BoyerMoore
1 error
Compilation Error on Booyer
======= Brute_003 ============

real	0m0.185s
user	0m0.224s
sys	0m0.032s
partially correct (200) perfeito
======= Brute_004 ============

real	0m0.174s
user	0m0.156s
sys	0m0.056s
partially correct (200) perfeito
======= Brute_005 ============

real	0m0.166s
user	0m0.200s
sys	0m0.024s
partially correct (200) perfeito
======= KMP_000 ============

real	0m0.147s
user	0m0.180s
sys	0m0.020s
partially correct (120) 120 linhas certas de 200. primeiro erro: linha 1 difere - operação: '200', esperado: '0 8 25 ', encontrado: '0 25 '
======= KMP_001 ============

real	0m0.162s
user	0m0.200s
sys	0m0.016s
partially correct (200) perfeito
======= KMP_002 ============

real	0m0.166s
user	0m0.180s
sys	0m0.040s
partially correct (200) perfeito
